--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"yup": "^1.2.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.17",
 		"@types/node": "^20.4.10",
 		"@types/yup": "^0.32.0",
