new project structure

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ benchmarks/graphs
 
 # ignore additional files using core.excludesFile
 # https://git-scm.com/docs/gitignore
+
+# Environment
+.env
