--- a/package.json
+++ b/package.json
@@ -4,27 +4,31 @@
 	"description": "A project based on the Pomodoro time management method, designed for collaborative work",
 	"main": "server.ts",
 	"scripts": {
-		"start": "nodemon server.js"
+		"start": "nodemon ./src/server.ts"
 	},
 	"author": "Pourya-Ataee",
 	"license": "MIT",
 	"dependencies": {
 		"bcrypt": "^5.1.0",
 		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
 		"mkdirp": "^3.0.1",
 		"mongoose": "^7.4.3",
-		"mongoose-timestamp": "^0.6.0",
 		"multer": "^1.4.5-lts.1",
 		"yup": "^1.2.0"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
-		"@types/node": "^20.4.10",
+		"@types/node": "^20.5.0",
 		"@types/yup": "^0.32.0",
 		"nodemon": "^3.0.1",
+		"ts-node": "^10.9.1",
+		"tslib": "^2.6.1",
 		"typescript": "^5.1.6"
 	}
 }
