--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.5.0",
 		"@types/yup": "^0.32.0",
 		"nodemon": "^3.0.1",
