--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "A project based on the Pomodoro time management method, designed for collaborative work",
 	"main": "server.ts",
 	"scripts": {
-		"start": "nodemon ./src/server.ts"
+		"start": "nodemon ./src/server.ts",
+		"build": "tsc"
 	},
 	"author": "Pourya-Ataee",
 	"license": "MIT",
@@ -29,7 +30,7 @@
 		"@types/yup": "^0.32.0",
 		"nodemon": "^3.0.1",
 		"ts-node": "^10.9.1",
-		"tslib": "^2.6.1",
+		"tslib": "^2.6.2",
 		"typescript": "^5.1.6"
 	}
 }
