--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A project based on the Pomodoro time management method, designed for collaborative work",
 	"main": "server.ts",
 	"scripts": {
-		"start": "nodemon ./src/server.ts",
+		"start": "node ./src/server.ts",
 		"build": "tsc"
 	},
 	"author": "Pourya-Ataee",
@@ -17,8 +17,9 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.1",
 		"mkdirp": "^3.0.1",
-		"mongoose": "^7.4.3",
 		"multer": "^1.4.5-lts.1",
+		"mysql2": "^3.6.0",
+		"sequelize": "^6.32.1",
 		"yup": "^1.2.0"
 	},
 	"devDependencies": {
@@ -28,7 +29,6 @@
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.5.0",
 		"@types/yup": "^0.32.0",
-		"nodemon": "^3.0.1",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.1.6"
