--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A project based on the Pomodoro time management method, designed for collaborative work",
 	"main": "server.ts",
 	"scripts": {
-		"start": "node ./src/server.ts",
+		"start": "ts-node ./src/server.ts",
 		"build": "tsc"
 	},
 	"author": "Pourya-Ataee",
@@ -31,6 +31,6 @@
 		"@types/yup": "^0.32.0",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.6.2",
-		"typescript": "^5.1.6"
+		"typescript": "^5.2.2"
 	}
 }
