--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
 		"mkdirp": "^3.0.1",
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.6.0",
-		"sequelize": "^6.32.1",
-		"yup": "^1.2.0"
+		"sequelize": "^6.32.1"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
@@ -28,7 +27,6 @@
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/node": "^20.5.0",
-		"@types/yup": "^0.32.0",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.2.2"
