create team - add, delete user for team

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"resolveJsonModule": true,
-		"importHelpers": true,
+		"importHelpers": true
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules"],
+	"files": ["src/types/index.d.ts"]
 }
