--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"mkdirp": "^3.0.1",
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.6.0",
-		"sequelize": "^6.32.1"
+		"sequelize": "^6.32.1",
+		"socket.io": "^4.7.2"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
