--- a/package.json
+++ b/package.json
@@ -11,19 +11,25 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.2",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.4.4",
-		"socket.io": "^4.7.5"
+		"socket.io": "^4.7.5",
+		"validator": "^13.12.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.7",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.6",
 		"@types/node": "^20.14.9",
+		"@types/validator": "^13.12.0",
 		"ts-node": "^10.9.2",
 		"tslib": "^2.6.3",
 		"typescript": "^5.5.2"
